--- a/pagestyle.css
+++ b/pagestyle.css
@@ -1,7 +1,7 @@
 /* color palette from https://www.color-hex.com/color-palettes */
 :root {
-	--darkest-color: #682539;
-	--lightest-color: #8a4b5a;
+	--darkest-color: #a28089;
+	--lightest-color: #a0d2eb;
 	--highlight-color: #a96c78;
 	--bright-color-1: #cc929a;
 	--bright-color-2: #e8b1b5;
